objects/G2Crowd__G2_Related_Event__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__City__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country_Code__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Country__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Days_Ago__c</fullName>
        <formula>Text(G2Crowd__G2_Event__r.G2Crowd__Days_Ago__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Ago</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Event</label>
        <referenceTo>G2Crowd__G2_Event__c</referenceTo>
        <relationshipLabel>G2 Related Events</relationshipLabel>
        <relationshipName>Related_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>G2 Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Related_Organization_ID__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__G2_Visitor__c &amp; &apos;::&apos; &amp; G2Crowd__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Related Organization ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__IP__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__IP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Related_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Logo_URLs__c</fullName>
        <label>Logo URLs</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Resource_Name__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Resource_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State_Code__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__State__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Tag__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Time__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Title__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__URL__c</fullName>
        <formula>G2Crowd__G2_Event__r.G2Crowd__URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>G2 Related Event</label>
    <listViews>
        <fullName>G2Crowd__All</fullName>
        <columns>NAME</columns>
        <columns>G2Crowd__G2_Event__c</columns>
        <columns>G2Crowd__Tag__c</columns>
        <columns>G2Crowd__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Related Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G2 Related Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>